# MedicalAssistant

./: config.py  database.env  pyproject.toml
backend/: app.py
backend/CreateReadUpdateDelete/: appointment.py  depends.py  doctor.py  object_crud.py  user.py  utilities.py
backend/SchemasNModels/models/: models.py
backend/SchemasNModels/schemas/: choose_one.py  token.py  user_n_appointments_schemas.py
backend/api/: account.py  appointments.py  auth.py  doctor.py  doctor_auth.py  user.py  user_auth.py
backend/authentication/: utilities.py
backend/authentication/action/: object_auth_methods.py  user.py
backend/database/: database_config.py
