[tool.poetry]
name = "medical-assistant"
version = "0.1.0"
description = ""
authors = ["doublehomixide <apol94535@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-keycloak = "^4.7.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
passlib = {extras = ["context"], version = "^1.7.4"}
pydantic-extra-types = "^2.10.0"
databases = "^0.9.0"
asyncpg = "^0.30.0"
phonenumbers = "^8.13.50"
bcrypt = "^4.2.1"
jwt = "^1.3.1"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
